[package]
name = "raspberry_lights"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rppal = "^0.13.1"
ws2818-rgb-led-spi-driver = "2.0.0"
ctrlc = "3.2.2"
rand = "0.8.5"
axum = "0.5.4"
tokio = { version = "1.18.1", features = ["macros", "rt-multi-thread", "time"] }
serde = { version = "1.0.137", features = ["derive"] }
tower-http = { version = "0.3.2", features= ["trace"] }