[package]
name = "raspberry_lights"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rppal = "^0.13.1"
ws2818-rgb-led-spi-driver = "2.0.0"
ctrlc = "3.2.5"
rand = "0.8.5"
axum = "0.6.12"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread", "time"] }
serde = { version = "1.0.158", features = ["derive"] }
tower-http = { version = "0.4.0", features= ["trace"] }